force-app/main/default/objects/CommercialTeam__c/CommercialTeam__c.object-meta.xml
<CustomObject>
    <description>Represents a group of users responsible for sales.</description>
    <label>Commercial Team</label>
    <nameField>
        <label>Commercial Teams</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>