force-app/main/default/objects/CommercialTeam__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>Specifies the Team`s Country</description>
    <inlineHelpText>Specifies the Team`s Country</inlineHelpText>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BR</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>