force-app/main/default/objects/CommercialTeam__c/fields/Employee_Range__c.field-meta.xml
<CustomField>
    <fullName>Employee_Range__c</fullName>
    <label>Employee Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Employee_Range</valueSetName>
    </valueSet>
</CustomField>