force-app/main/default/objects/CommercialTeam__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Record unique identifier</description>
    <formula>TEXT(Product_Interest__c) &amp; &apos;-&apos; &amp; TEXT(Country_Code__c) &amp; &apos;-&apos; &amp; TEXT(Employee_Range__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key</label>
    <type>Text</type>
</CustomField>