force-app/main/default/objects/CommercialTeam__c/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <description>Main Product of interest</description>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Interest</valueSetName>
    </valueSet>
</CustomField>