force-app/main/default/objects/CommercialTeam__c/recordTypes/Brazil_Commercial_Team.recordType-meta.xml
<RecordType>
    <fullName>Brazil_Commercial_Team</fullName>
    <active>true</active>
    <label>Brazil Commercial Team</label>
</RecordType>