force-app/main/default/objects/CommercialTeam__c/recordTypes/France_Commercial_Team.recordType-meta.xml
<RecordType>
    <fullName>France_Commercial_Team</fullName>
    <active>true</active>
    <label>France Commercial Team</label>
</RecordType>